--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,13 @@ button:hover {
 .st-emotion-cache-1:hover {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+/* Responsive design */
+@media (max-width: 600px) {
+    .stButton > button {
+        width: 100%;
+    }
+    .stTextInput > div > div > input {
+        width: 100%;
+    }
+}
